<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile"/>

    <item
        android:id="@+id/nav_pets"
        android:icon="@drawable/baseline_pets_24"
        android:title="@string/petowner_s_pets"/>

    <item
        android:id="@+id/nav_made_requests"
        android:icon="@drawable/baseline_contact_mail_24"
        android:title="@string/your_requests"/>

    <item
        android:id="@+id/nav_reviews"
        android:icon="@drawable/baseline_reviews_24"
        android:title="@string/reviews"/>

    </group>

    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout"
                android:title="@string/logout"/>
        </menu>

    </item>
</menu>