<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile"/>

    <item
        android:id="@+id/nav_calendar"
        android:icon="@drawable/baseline_calendar_month_24"
        android:title="@string/petsitting_calendar"/>

    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/round_photo_library_24"
        android:title="@string/gallery"/>

    <item
        android:id="@+id/nav_your_reviews"
        android:icon="@drawable/baseline_reviews_24"
        android:title="Received reviews"/>

    </group>

    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout"
                android:title="@string/logout"/>
        </menu>

    </item>
</menu>